syntax = "proto3";

option go_package = "api/auth";

package auth;

service AuthService {
  rpc ExchangeGoogleOAuth(OAuthRequest) returns (AuthResponse);
  rpc ExchangeYandexOAuth(OAuthRequest) returns (AuthResponse);
  rpc GenerateOTP(GenerateOTPRequest) returns (GenerateOTPResponse);
  rpc VerifyOTP(VerifyOTPRequest) returns (AuthResponse);
}

message OAuthRequest {
  string code = 1;
}

message GenerateOTPRequest {
  string email = 1;
}

message GenerateOTPResponse {
}

message VerifyOTPRequest {
  string otp = 1;
  string email = 2;
}

message AuthResponse {
  string access_token = 1;
  bool is_new_user = 2;
}